# flexipipe

./: .gitignore  LLM_CONTEXT.md  MULTIPLATFORM_SUPPORT.md  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt  setup.py
binder/: requirements.txt
docs/: programming.md  tune_hyperparameters.md
examples/: README.md  check_accuracy.sh  programming.md  train_example.sh  udpipe-binder.ipynb
flexipipe/: README.md  __init__.py  __main__.py  _cli.py  _cli_info.py  _cli_install.py  _cli_router.py  _cli_shared.py  backend_registry.py  backend_spec.py  backend_utils.py  benchmark.py  cache_manager.py  check.py  config.py  conllu.py  contractions.py  core.py  data_loading.py  dependency_utils.py  doc.py  doc_utils.py  engine.py  examples_data.py  file_utils.py  info.py  insert_tokens.py  insert_tokens_minidom.py  insert_tokens_teitok.py  install.py  io_conllu.py  io_registry.py  language_mapping.py  language_utils.py  lexicon.py  linebreak_rejoin.py  model_catalog.py  model_registry.py  model_storage.py  models.py  (+26 more)
flexipipe/backends/: FASTTEXT_NOTES.md  __init__.py  classla.py  ctext.py  fasttext.py  flair.py  flexitag.py  hunspell_normalizer.py  nametag.py  sentencepiece_segmenter.py  spacy.py  stanza.py  transformers.py  treetagger.py  udkanbun.py  udmorph.py  udpipe.py  udpipe1.py
flexipipe/cli/: __init__.py  analyze.py  create_vocab.py  normalizer.py  tag.py  train.py
flexipipe/data/: flexipipe_launcher.c  flexipipe_wrapper.sh
flexipipe/language_detectors/: __init__.py  fasttext_detector.py  heliport_detector.py  langdetect_detector.py  langid_detector.py  trigram_detector.py
flexipipe/scripts/: add_flexipipe_model.py  debug_accuracy.py  harvest_spacy_models.py  scan_ud_treebanks.py
flexitag/: CMakeLists.txt
flexitag/bindings/python/: module.cpp
flexitag/cli/: flexitag_cli.cpp
flexitag/include/flexitag/: io_teitok.h  lexicon.h  normalizer.h  settings.h  tagger.h  types.h  unicode_utils.h
flexitag/src/: io_teitok.cpp  lexicon.cpp  normalizer.cpp  settings.cpp  tagger.cpp
src/: CMakeLists.txt  contractions.cpp  contractions.h  flexipipe_cpp.cpp  io_conllu.h  io_teitok.cpp  io_teitok.h  io_teitok_writer.cpp  io_teitok_writer.h  normalizer.cpp  normalizer.h  pipeline_cpp.cpp  pipeline_cpp.h  pipeline_pybind.cpp  tokenizer.cpp  tokenizer.h  types.h  viterbi_cpp.cpp  viterbi_optimized.cpp  viterbi_optimized.h  vocab_loader.cpp  vocab_loader.h
tests/: oldes-example.txt
wiki/: Backends.md  Contributing.md  Home.md  Installation.md  Quick-Start.md  README.md  Reference.md
